--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "start":"vite",
+    "start": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
-    "echarts": "5.0.2",
+    "echarts": "^5.2.2",
     "history": "4.9.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
