--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "big-screen-demo-01",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "start": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@types/history": "4.7.8",
-    "@types/react": "17.0.3",
+    "@types/react": "^17.0.3",
     "@types/react-dom": "17.0.3",
     "@types/react-router-dom": "5.1.7",
     "@vitejs/plugin-react-refresh": "1.3.2",
